2nd training/Community/Community/Community1/force-app/main/default/objects/SFDC_520_Approval_Request__c/SFDC_520_Approval_Request__c.object-meta.xml
<CustomObject>
    <label>Approval Request</label>
    <nameField>
        <displayFormat>AR-{00000000}</displayFormat>
        <label>Approval Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approval Requests</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>