2nd training/Community/Community/Community1/force-app/main/default/objects/SFDC_520_Approval_Request__c/fields/Approval_Action__c.field-meta.xml
<CustomField>
    <fullName>Approval_Action__c</fullName>
    <formula>HYPERLINK(s_Servlet_Directory__c&amp;&quot;01N200000008WR2&amp;eid=&quot;&amp;Id, IMAGE(s_Document_Directory__c&amp;&quot;01520000000AvVx&quot;, &quot;Approve&quot;) ) &amp; HYPERLINK(s_Servlet_Directory__c&amp;&quot;01N200000008WR3&amp;eid=&quot;&amp;Id, IMAGE(s_Document_Directory__c&amp;&quot;01520000000AvVw&quot;, &quot;Reject&quot;) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approval Action</label>
    <type>Text</type>
</CustomField>