2nd training/Community/Community/Community1/force-app/main/default/objects/SFDC_520_Approval_Request__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote</label>
    <referenceTo>SFDC_520_Quote_old__c</referenceTo>
    <relationshipLabel>Approval Requests</relationshipLabel>
    <relationshipName>R00N200000011mrZEAQ</relationshipName>
    <type>Lookup</type>
</CustomField>