2nd training/Community/Community/Community1/force-app/main/default/objects/SFDC_520_Approval_Request__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approved / Denied By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Approval Requests</relationshipLabel>
    <relationshipName>R00N200000011mraEAA</relationshipName>
    <type>Lookup</type>
</CustomField>